Add QuotationOfferDayDto and related repository queries for offer and day retrieval