@@ -1,10 +1,12 @@
 package com.proriberaapp.ribera.services.client.impl;
 
+import com.proriberaapp.ribera.Api.controllers.client.dto.QuotationOfferDayDto;
 import com.proriberaapp.ribera.Api.controllers.client.dto.quotationDayDto;
 import com.proriberaapp.ribera.Domain.dto.QuotationDto;
 import com.proriberaapp.ribera.Domain.entities.QuotationDayEntity;
 import com.proriberaapp.ribera.Domain.entities.QuotationEntity;
 import com.proriberaapp.ribera.Domain.entities.QuotationRoomOfferEntity;
+import com.proriberaapp.ribera.Infraestructure.exception.QuoteAndOfferIsAlreadyRegisteredException;
 import com.proriberaapp.ribera.Infraestructure.repository.QuotationDayRepository;
 import com.proriberaapp.ribera.Infraestructure.repository.QuotationRepository;
 import com.proriberaapp.ribera.Infraestructure.repository.QuotationRoomOfferRepository;
@@ -47,107 +49,149 @@ public class QuotationServiceImpl implements QuotationService {
                                 .adultMayorCost(quotationDto.getAdultMayorCost())
                                 .adultExtraCost(quotationDto.getAdultExtraCost())
                                 .build();
-
-                return quotationRepository.save(quotationEntity)
-                                .flatMap(savedQuotation -> {
-                                        List<QuotationDayEntity> days = quotationDto.getDays().stream()
-                                                        .filter(d -> d.isSelected())
-                                                        .map(d -> QuotationDayEntity.builder()
-                                                                        .idQuotation(savedQuotation.getQuotationId())
-                                                                        .idDay(d.getId())
-                                                                        .build())
-                                                        .collect(Collectors.toList());
-                                        List<QuotationRoomOfferEntity> quotationRoomOffers = quotationDto
-                                                        .getRoomOfferIds().stream()
-                                                        .map(roomOfferId -> QuotationRoomOfferEntity.builder()
-                                                                        .quotationId(savedQuotation.getQuotationId())
-                                                                        .roomOfferId(roomOfferId)
-                                                                        .build())
-                                                        .collect(Collectors.toList());
-                                        return quotationRoomOfferRepository.saveAll(
-                                                        quotationRoomOffers)
-                                                        .flatMap(d -> quotationDayRepository.saveAll(days))
-                                                        .then(Mono.just(savedQuotation));
-                                        /*
-                                         * return Flux.zip(quotationRoomOfferRepository.saveAll(
-                                         * quotationRoomOffers), quotationDayRepository.saveAll(days))
-                                         * .then(Mono.just(savedQuotation));
-                                         */
+                List<Integer> daysSelected=quotationDto.getDays().stream().filter(d -> d.isSelected()).map(d -> d.getId()).toList();
+                return quotationRepository.getQuotationFindOfferAndDays(quotationDto.getRoomOfferIds(),
+                                daysSelected)
+                                .collectList()
+                                .flatMap(quotations -> {
+                                        if (quotations.size() > 0) {
+                                                QuotationOfferDayDto quotationOfferDayDto = quotations.get(0);
+                                                return Mono.error(new QuoteAndOfferIsAlreadyRegisteredException(
+                                                                quotationOfferDayDto
+                                                                                .getOffername(),
+                                                                quotationOfferDayDto.getQuotation_description(),
+                                                                quotationOfferDayDto.getDayname()));
+                                        }
+                                        return quotationRepository.save(quotationEntity)
+                                                        .flatMap(savedQuotation -> {
+                                                                List<QuotationDayEntity> days = quotationDto.getDays()
+                                                                                .stream()
+                                                                                .filter(d -> d.isSelected())
+                                                                                .map(d -> QuotationDayEntity.builder()
+                                                                                                .idQuotation(savedQuotation
+                                                                                                                .getQuotationId())
+                                                                                                .idDay(d.getId())
+                                                                                                .build())
+                                                                                .collect(Collectors.toList());
+                                                                List<QuotationRoomOfferEntity> quotationRoomOffers = quotationDto
+                                                                                .getRoomOfferIds().stream()
+                                                                                .map(roomOfferId -> QuotationRoomOfferEntity
+                                                                                                .builder()
+                                                                                                .quotationId(savedQuotation
+                                                                                                                .getQuotationId())
+                                                                                                .roomOfferId(roomOfferId)
+                                                                                                .build())
+                                                                                .collect(Collectors.toList());
+                                                                return quotationRoomOfferRepository.saveAll(
+                                                                                quotationRoomOffers)
+                                                                                .flatMap(d -> quotationDayRepository
+                                                                                                .saveAll(days))
+                                                                                .then(Mono.just(savedQuotation));
+                                                                /*
+                                                                 * return Flux.zip(quotationRoomOfferRepository.saveAll(
+                                                                 * quotationRoomOffers),
+                                                                 * quotationDayRepository.saveAll(days))
+                                                                 * .then(Mono.just(savedQuotation));
+                                                                 */
+                                                        });
                                 });
+
         }
 
         @Override
         public Mono<QuotationEntity> updateQuotation(QuotationDto quotationDto) {
-                return quotationRepository.findById(quotationDto.getQuotationId())
-                                .flatMap(existingQuotation -> {
-                                        existingQuotation.setQuotationDescription(
-                                                        quotationDto.getQuotationDescription());
-                                        existingQuotation.setKidCost(quotationDto.getKidCost());
-                                        existingQuotation.setAdultCost(quotationDto.getAdultCost());
-                                        existingQuotation.setAdultMayorCost(quotationDto.getAdultMayorCost());
-                                        existingQuotation.setAdultExtraCost(quotationDto.getAdultExtraCost());
-                                        return quotationRepository.save(existingQuotation)
-                                                        .flatMap(savedQuotation -> quotationRoomOfferRepository
-                                                                        .findAllByQuotationId(
-                                                                                        quotationDto.getQuotationId())
-                                                                        .collectList()
-                                                                        .flatMap(existingQuotationRoomOffers -> {
-                                                                                List<Integer> existingRoomOfferIds = existingQuotationRoomOffers
-                                                                                                .stream()
-                                                                                                .map(QuotationRoomOfferEntity::getRoomOfferId)
-                                                                                                .toList();
-                                                                                List<Integer> roomOffersToDeactivate = existingRoomOfferIds
-                                                                                                .stream()
-                                                                                                .filter(roomOfferId -> !quotationDto
-                                                                                                                .getRoomOfferIds()
-                                                                                                                .contains(roomOfferId))
-                                                                                                .collect(Collectors
-                                                                                                                .toList());
-                                                                                List<QuotationDayEntity> days = quotationDto
-                                                                                                .getDays().stream()
-                                                                                                .filter(d -> d.isSelected())
-                                                                                                .map(d -> QuotationDayEntity
-                                                                                                                .builder()
-                                                                                                                .idQuotation(savedQuotation
-                                                                                                                                .getQuotationId())
-                                                                                                                .idDay(d.getId())
-                                                                                                                .build())
-                                                                                                .collect(Collectors
-                                                                                                                .toList());
-                                                                                return Flux.fromIterable(
-                                                                                                roomOffersToDeactivate)
-                                                                                                .flatMap(roomOfferId -> roomOfferRepository
-                                                                                                                .findById(roomOfferId)
-                                                                                                                .flatMap(roomOffer -> {
-                                                                                                                        roomOffer.setState(
-                                                                                                                                        2);
-                                                                                                                        return roomOfferRepository
-                                                                                                                                        .save(roomOffer);
-                                                                                                                }))
-                                                                                                .then(quotationRoomOfferRepository
-                                                                                                                .deleteAllByQuotationId(
-                                                                                                                                quotationDto.getQuotationId()))
-                                                                                                .thenMany(Flux.fromIterable(
-                                                                                                                quotationDto.getRoomOfferIds())
-                                                                                                                .map(roomOfferId -> QuotationRoomOfferEntity
-                                                                                                                                .builder()
-                                                                                                                                .quotationId(quotationDto
-                                                                                                                                                .getQuotationId())
-                                                                                                                                .roomOfferId(roomOfferId)
-                                                                                                                                .build()))
+                List<Integer> daysSelected = quotationDto.getDays().stream().filter(d -> d.isSelected())
+                                .map(d -> d.getId()).toList();
+
+                return quotationRepository.getQuotationFindOfferAndDays(quotationDto.getRoomOfferIds(),
+                                daysSelected,
+                                quotationDto.getQuotationId())
+                                .collectList()
+                                .flatMap(quotations -> {
+                                        if (quotations.size() > 0) {
+                                                QuotationOfferDayDto quotationOfferDayDto = quotations.get(0);
+                                                return Mono.error(new QuoteAndOfferIsAlreadyRegisteredException(
+                                                                quotationOfferDayDto
+                                                                                .getOffername(),
+                                                                quotationOfferDayDto.getQuotation_description(),
+                                                                quotationOfferDayDto.getDayname()));
+                                        }
+                                        return quotationRepository.findById(quotationDto.getQuotationId())
+                                                        .flatMap(existingQuotation -> {
+                                                                existingQuotation.setQuotationDescription(
+                                                                                quotationDto.getQuotationDescription());
+                                                                existingQuotation.setKidCost(quotationDto.getKidCost());
+                                                                existingQuotation.setAdultCost(
+                                                                                quotationDto.getAdultCost());
+                                                                existingQuotation.setAdultMayorCost(
+                                                                                quotationDto.getAdultMayorCost());
+                                                                existingQuotation.setAdultExtraCost(
+                                                                                quotationDto.getAdultExtraCost());
+                                                                return quotationRepository.save(existingQuotation)
+                                                                                .flatMap(savedQuotation -> quotationRoomOfferRepository
+                                                                                                .findAllByQuotationId(
+                                                                                                                quotationDto.getQuotationId())
                                                                                                 .collectList()
-                                                                                                .flatMap(entities -> quotationRoomOfferRepository
-                                                                                                                .saveAll(Flux.fromIterable(
-                                                                                                                                entities))
-                                                                                                                .then(this.quotationDayRepository
-                                                                                                                                .deleteFindQuotationId(
-                                                                                                                                                savedQuotation.getQuotationId())
-                                                                                                                                .then(this.quotationDayRepository
-                                                                                                                                                .saveAll(days)
-                                                                                                                                                .then())))
-                                                                                                .then(Mono.just(savedQuotation));
-                                                                        }));
+                                                                                                .flatMap(existingQuotationRoomOffers -> {
+                                                                                                        List<Integer> existingRoomOfferIds = existingQuotationRoomOffers
+                                                                                                                        .stream()
+                                                                                                                        .map(QuotationRoomOfferEntity::getRoomOfferId)
+                                                                                                                        .toList();
+                                                                                                        List<Integer> roomOffersToDeactivate = existingRoomOfferIds
+                                                                                                                        .stream()
+                                                                                                                        .filter(roomOfferId -> !quotationDto
+                                                                                                                                        .getRoomOfferIds()
+                                                                                                                                        .contains(roomOfferId))
+                                                                                                                        .collect(Collectors
+                                                                                                                                        .toList());
+                                                                                                        List<QuotationDayEntity> days = quotationDto
+                                                                                                                        .getDays()
+                                                                                                                        .stream()
+                                                                                                                        .filter(d -> d.isSelected())
+                                                                                                                        .map(d -> QuotationDayEntity
+                                                                                                                                        .builder()
+                                                                                                                                        .idQuotation(savedQuotation
+                                                                                                                                                        .getQuotationId())
+                                                                                                                                        .idDay(d.getId())
+                                                                                                                                        .build())
+                                                                                                                        .collect(Collectors
+                                                                                                                                        .toList());
+                                                                                                        return Flux.fromIterable(
+                                                                                                                        roomOffersToDeactivate)
+                                                                                                                        .flatMap(roomOfferId -> roomOfferRepository
+                                                                                                                                        .findById(roomOfferId)
+                                                                                                                                        .flatMap(roomOffer -> {
+                                                                                                                                                roomOffer.setState(
+                                                                                                                                                                2);
+                                                                                                                                                return roomOfferRepository
+                                                                                                                                                                .save(roomOffer);
+                                                                                                                                        }))
+                                                                                                                        .then(quotationRoomOfferRepository
+                                                                                                                                        .deleteAllByQuotationId(
+                                                                                                                                                        quotationDto.getQuotationId()))
+                                                                                                                        .thenMany(Flux.fromIterable(
+                                                                                                                                        quotationDto.getRoomOfferIds())
+                                                                                                                                        .map(roomOfferId -> QuotationRoomOfferEntity
+                                                                                                                                                        .builder()
+                                                                                                                                                        .quotationId(quotationDto
+                                                                                                                                                                        .getQuotationId())
+                                                                                                                                                        .roomOfferId(roomOfferId)
+                                                                                                                                                        .build()))
+                                                                                                                        .collectList()
+                                                                                                                        .flatMap(entities -> quotationRoomOfferRepository
+                                                                                                                                        .saveAll(Flux.fromIterable(
+                                                                                                                                                        entities))
+                                                                                                                                        .then(this.quotationDayRepository
+                                                                                                                                                        .deleteFindQuotationId(
+                                                                                                                                                                        savedQuotation.getQuotationId())
+                                                                                                                                                        .then(this.quotationDayRepository
+                                                                                                                                                                        .saveAll(days)
+                                                                                                                                                                        .then())))
+                                                                                                                        .then(Mono.just(savedQuotation));
+                                                                                                }));
+                                                        });
                                 });
+
         }
 
         @Override
